# sfu-server

./: .env.example  .gitignore  CLI_GUIDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
contracts/proctoring/: .env.example  hardhat.config.js  package-lock.json  package.json
contracts/proctoring/contracts/: Proctoring.sol
contracts/proctoring/scripts/: deploy.js  test-contract.js
src/: error.rs  main.rs
src/api/: mod.rs  sfu_routes.rs  sfu_websocket.rs
src/config/: mod.rs
src/ipfs/: mod.rs
src/recording/: mod.rs  pipeline.rs  recorder.rs  state.rs
src/sfu/: connection.rs  mod.rs  room.rs  server.rs  signaling.rs  track_manager.rs  webrtc_utils.rs
src/substrate/: client.rs  config.rs  mod.rs  queue.rs
tests/: integration_test.rs
