[package]
name = "sfu-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sfu-server"
path = "src/main.rs"

[[bin]]
name = "sfu-cli"
path = "src/bin/cli.rs"

[dependencies]
webrtc = "0.8"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
dotenv = "0.15"
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
tokio-tungstenite = "0.21"
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
gstreamer-audio = "0.22"
gstreamer-pbutils = "0.22"
urlencoding = "2.1"

# Asset Hub EVM interaction
ethers = { version = "2.0", features = ["rustls", "ws"] }
hex = "0.4"
